# DictzipQuery

./: CMakeLists.txt  README.md  example.cc
src/: archive.cc  archive.h  index.cc  index.h
src/istream/: buffer.cc  buffer.h  stream.cc  stream.h
src/util/: base64.cc  base64.h  gzip.h  query.cc  query.h
